css/index.css
*{
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
html {
  height: 100%;
}
body{
  height: 100%;
  background-image: url("../assets/bg.jpg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  color: rgba(255, 255, 255, 1);
}
.container{
  width: 100%;
  height: 100%;
  background-color: rgba(245, 245, 220,0.2);
  box-shadow: 5px 5px 10px #080808, -5px -5px 10px #080808;
}
.items{
  width: 100%;
}
#city-input{
  float:left;
  width:75%;
  outline: none;
  background-color: transparent;
  border: none;
  border-bottom: 1px solid white;
  color: white;
  transition: transform 1s;
  padding: 10px;
  font-size: 17px;
  
}
#city-input:focus{
  background-color: transparent;
  transform: scale(1.1);
  outline: none;
  box-shadow: 5px 5px 10px #080808;
}
#city-input::placeholder{
  color: white;
}
button{
  float:right;
  width:20%;
  background-color: rgb(66,75,82);
  border: 1px solid white;
  padding: 10px;
  color: white;
  font-size: 17px;
  cursor: pointer;
}
button:hover{
  background-color: rgb(145,163,176); 
}
#city-form::after {
  content: "";
  clear: both;
  display: table;
}
#degrees{
  font-size: 3em;
  font-weight: 800;
}
#city{
  font-size: 4.5em;
  font-weight: 800;
}
#time{
  font-size: 0.8em;
  font-weight: 800;
}
img{
  width: 100px;
  height: 100px;
  display: inline-block;
}
#weather-description{
  font-size: 1.3em;
  font-weight: 800;
}
h4{
  text-align: center;
}
table tr{
  color: white;
  font-size: 1em;
  font-weight: 600;
}

/* styling for screen sizes above 768px */
@media screen and (min-width: 768px) {
  .container{
  width: 100%;
  height: 80%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  }
  .right{
    border-left: 2px solid rgba(8, 8, 8, 0.4);
    border-top: none;
  }
  #city-form{
    width: 50%;
  }
  .weather-summary{
    position: absolute;
    bottom: 0;
  }
  #degrees{
    font-size: 4em;
    font-weight: 800;
  }
  #city{
    font-size: 5em;
    font-weight: 800;
  }
  #time{
    font-size: 1.1em;
    font-weight: 800;
  }
  table{
    margin-top: 20%;
  }
  h4{
    margin-top: 1em;
  }
} 

